Point to correct src/index.tsx path

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
   <div id="root"></div>
   <!-- Correction du script (plus de slash) -->
-  <script type="module" src="index.tsx"></script>
+  <script type="module" src="/src/index.tsx"></script>
 </body>
 
 </html>
