--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
   <div id="root"></div>
   <!-- Correction du script (plus de slash) -->
   <script type="module" src="./src/index.tsx"></script>
+  <!-- Force Deploy Fix -->
+
 </body>
 
 </html>
